# WolffM_vibecop

./: .gitignore  LICENSE  README.md  action.yml  claude.md  eslint.config.mjs  knip.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vibeCop_spec.md  vibecop.json  vitest.config.ts
.github/workflows/: reusable-analyze.yml  reusable-pr-review.yml  self-test.yml  vibecheck.yml
.trunk/: trunk.yaml
config/: trunk.yaml  vibeCop.schema.json  vibecheck.json
docs/: install.html  spec.md
scripts/: analyze.ts  build-llm-json.ts  build-sarif.ts  config-loader.ts  fingerprints.test.ts  fingerprints.ts  github.ts  issue-formatter.ts  parsers.ts  repo-detect.ts  sarif-to-issues.ts  scoring.test.ts  scoring.ts  test-issue-output.ts  tool-registry.ts  tool-runners.ts  tool-utils.ts  types.ts  verbose-analyze.ts  vibecheck-analysis.ts  workflow-generator.test.ts  workflow-generator.ts
scripts/parsers/: java.ts  python.ts  security.ts  typescript.ts
scripts/scoring/: classification.ts
src/: parsers.ts  scoring.ts
src/core/: analyze.ts  config-loader.ts  repo-detect.ts  run-analyze.ts  types.ts
src/github/: github.ts  sarif-to-issues.ts  workflow-generator.ts
src/output/: build-llm-json.ts  build-sarif.ts  issue-formatter.ts
src/parsers/: index.ts  java.ts  python.ts  (+3 more)
templates/: caller-workflow.yml  vibecop.yml  workflow.yml
test-fixtures/: Cargo.toml  PmdIssues.java  README.md  SpotBugsIssues.java  eslint-issues.ts  mypy-issues.py  ruff-issues.py
tests/: fingerprints.test.ts  local-preview.ts  scoring.test.ts  workflow-generator.test.ts
(+23 files in other folders)
